# modern-blog

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
core/: schema.py  settings.py  urls.py
posts/: admin.py  models.py  schema.py
posts/migrations/: 0001_initial.py  0002_postcomment_comment.py  0003_post_created_at_post_updated_at_and_more.py  0004_post_content_post_time_to_read_postlikes.py  0005_post_slug_alter_post_time_to_read.py  0006_alter_post_options_alter_post_slug_and_more.py  0007_postcomment_blocked.py
users/: models.py  schema.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_plan_subscription_plan_subscribers.py  0004_user_verified.py
utils/: auth.py  decorators.py  graphql.py  models.py
