[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Dependencies for personal blog posting application"
authors = ["iamrahulrnair <rahulrnair007@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
django-environ = "^0.10.0"
psycopg2 = "^2.9.7"
graphene-django = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
